# mcp-cli-chat

./: .gitignore  CLAUDE.md  README.md  main.py  mcp_client.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  simple_web_server.py  start_web.py  tailwind.config.js  test_web.py  web_app.py
.github/workflows/: tests.yml
core/: chat.py  claude.py  cli_chat.py  tools.py
static/src/: input.css
templates/: chat.html
tests/: __init__.py  conftest.py  test_mcp_client.py  test_mcp_server.py  test_web_app.py
tests/core/: test_chat.py  test_claude.py  test_cli_chat.py
